[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation library with multiple algorithms"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Eduarda Seragioli", email = "eseragio@student.42porto.com"},
	{name = "Danielle Seragioli", email = "dseragio@student.42porto.com"}

]
keywords = ["maze", "generator", "algorithm", "pathfinding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "flake8"]

[tool.setuptools.packages]
find = {where = ["src"]}

[project.urls]
Homepage = "https://github.com/eduardaseragioli/a_maze_ing"
Repository = "https://github.com/eduardaseragioli/a_maze_ing.git"
Issues = "https://github.com/eduardaseragioli/a_maze_ing/issues"
Documentation = "https://github.com/eduardaseragioli/a_maze_ing#mazegen"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]